--- a/public/global.css
+++ b/public/global.css
@@ -11,11 +11,22 @@ html {
 *, *:before, *:after {
     box-sizing: inherit;
 }
-  
+
+
 body {
     background: var(--hue-1);
-    /* color: var(--hue-3); */
     font-family: 'Courier New', Courier, monospace;
-    padding-left: 7.5rem;
-    padding-right: 8rem;
+    /* color: var(--hue-3); */
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+
+
+/* desktop */
+@media only screen and (min-width: 768px) {
+    body {
+        padding-left: 7.5rem;
+        padding-right: 8rem;
+    }
 }
